# bb

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  update-submodules.ps1
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml  version-check.yml
bb-consts/: Cargo.toml  README.md
bb-consts-tui/: Cargo.toml  README.md
bb-consts-tui/src/: data.rs  main.rs
bb-consts/src/: lib.rs  main.rs
bb-funcs/: Cargo.toml  README.md
bb-funcs/src/: lib.rs  main.rs
bb-types/: Cargo.toml  README.md
bb-types-tui/: Cargo.toml  README.md
bb-types/src/: lib.rs  main.rs
cli/bb-consts/: Cargo.toml  README.md
cli/bb-consts/src/: lib.rs  main.rs
cli/bb-funcs/: Cargo.toml  README.md
cli/bb-funcs/src/: enriched.rs  lib.rs  main.rs  where_filter.rs
cli/bb-types/: Cargo.toml  README.md
cli/bb-types/src/: lib.rs  main.rs
crates/bb-arch/: Cargo.toml  README.md
crates/bb-arch/src/: display.rs  json.rs  lib.rs
crates/bb-arch/src/reg/: arm32.rs  arm64.rs  mod.rs  x86.rs
crates/bb-clang/: Cargo.toml  README.md
crates/bb-clang/src/: enum_.rs  error.rs  ext.rs  json.rs  lib.rs  location.rs  record.rs  type_info.rs  typedef.rs
crates/bb-clang/src/constant/: macro_.rs  mod.rs
crates/bb-clang/src/display/: constant.rs  enum_.rs  function.rs  mod.rs  struct_.rs  typedef.rs
crates/bb-clang/src/function/: abi.rs  mod.rs  param.rs
crates/bb-clang/src/struct_/: field.rs  mod.rs
crates/bb-clang/src/union_/: mod.rs
crates/bb-cli/: Cargo.toml  README.md
crates/bb-cli/src/: lib.rs
crates/bb-sdk/: Cargo.toml  README.md  build.rs
crates/bb-sdk/src/: arch.rs  cache.rs  config.rs  lib.rs  parser.rs
crates/bb-sdk/src/phnt/: kernel.rs  mod.rs  user.rs
crates/bb-sdk/src/winsdk/: kernel.rs  mod.rs  user.rs
crates/bb-shared/: Cargo.toml
crates/bb-sparse/: Cargo.toml  README.md  build.rs
crates/bb-sparse/src/: irql.rs  lib.rs
crates/bb-sql/: Cargo.toml
crates/bb-sql/src/: eval.rs  export.rs  lib.rs  value.rs
crates/bb-tui/: Cargo.toml
crates/bb-tui/src/: event.rs  ui.rs
extra/: phnt.h
media/: bb diagram.excalidraw
src/: lib.rs  main.rs
src/arch/: mod.rs
src/clang/: display.rs  mod.rs  traits.rs
src/error/: mod.rs
src/matcher/: mod.rs
src/phnt/: mod.rs
src/winsdk/: mod.rs
tests/: Cargo.toml  matcher_tests.rs
tests/src/: integration.rs  lib.rs  sparse.rs
tui/bb-consts-tui/: Cargo.toml  README.md
tui/bb-consts-tui/src/: main.rs
tui/bb-types-tui/: Cargo.toml  README.md
tui/bb-types-tui/src/: data.rs  main.rs
util/bb-arch/: Cargo.toml  README.md
util/bb-arch/src/: lib.rs  location.rs
util/bb-arch/src/reg/: arm32.rs  arm64.rs  x64.rs
util/bb-clang/: Cargo.toml  README.md
util/bb-clang/src/: cexpr.rs  display.rs  enum_.rs  error.rs  field.rs  function.rs  json.rs  lib.rs  location.rs  param.rs  struct_.rs  traits.rs
util/bb-clang/src/constant/: macro_.rs  mod.rs  token_conv.rs  value.rs
util/bb-clang/src/display/: const_.rs  enum_.rs  function.rs  mod.rs  struct_.rs
util/bb-clang/src/function/: callconv.rs  mod.rs  param.rs
util/bb-clang/src/struct_/: field.rs  mod.rs
util/bb-cli/: Cargo.toml
util/bb-cli/src/: lib.rs
util/bb-sdk/: Cargo.toml  README.md
util/bb-sdk/src/: arch.rs  config.rs  lib.rs  parser.rs  phnt.rs  winsdk.rs
util/bb-sdk/src/phnt/: mod.rs
util/bb-sdk/src/winsdk/: kernel.rs  mod.rs  user.rs
util/bb-shared/: Cargo.toml  README.md
util/bb-shared/src/: lib.rs
util/bb-tui/: README.md
util/bb-tui/src/: event.rs  lib.rs  ui.rs
