[workspace]
members = [
    "tests",
    # Libraries
    "crates/bb-arch",
    "crates/bb-clang",
    "crates/bb-shared",
    "crates/bb-sdk",
    "crates/bb-sparse",
    "crates/bb-cli",
    "crates/bb-tui",
    # CLI binaries
    "cli/bb-types",
    "cli/bb-consts",
    "cli/bb-funcs",
    # TUI binaries
    "tui/bb-types-tui",
    "tui/bb-consts-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Gabriela Cristei <cristei.g772@gmail.com>", "Testers and contributors"]
description = "Windows through a detective's lens. Analyze and export types, constants, functions across architectures and SDKs."
repository = "https://github.com/cristeigabriela/bb"
homepage = "https://github.com/cristeigabriela/bb"
edition = "2024"

keywords = ["windows", "cli", "tui", "parser"]
categories = ["command-line-utilities", "development-tools", "parsing-tools"]

[workspace.dependencies]
bb-arch = { path = "crates/bb-arch" }
bb-clang = { path = "crates/bb-clang" }
bb-sparse = { path = "crates/bb-sparse" }
bb-shared = { path = "crates/bb-shared" }
bb-sdk = { path = "crates/bb-sdk" }
bb-cli = { path = "crates/bb-cli" }
bb-tui = { path = "crates/bb-tui" }

clang = { version = "2.0.0", features = ["clang_10_0"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
cexpr = "0.6.0"
comfy-table = "7"
sqlparser = "0.61"
terminal_size = "0.4"
flate2 = "1"
ratatui = "0.30.0"
serial_test = "3.2.0"
