[package]
name = "bb-consts-tui"
version.workspace = true
edition.workspace = true

[dependencies]
bb-tui = { workspace = true }
bb-clang = { workspace = true }
bb-shared = { workspace = true }
bb-cli = { workspace = true }
bb-consts = { path = "../bb-consts" }

clang = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
