[package]
name = "bb-types"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bb-types"
path = "src/main.rs"

[dependencies]
bb-sdk.workspace = true
bb-clang.workspace = true
bb-shared.workspace = true
clang.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
