[package]
name = "bb-tests"
version.workspace = true
edition.workspace = true

[lib]
name = "bb_tests"
path = "src/lib.rs"

[dependencies]
bb-consts = { path = "../bb-consts" }
bb-types = { path = "../bb-types" }
bb-clang.workspace = true
bb-sdk.workspace = true
clang.workspace = true
anyhow.workspace = true
serial_test.workspace = true
serde_json.workspace = true
