[package]
name = "bb-tests"
version.workspace = true
edition.workspace = true

[lib]
name = "bb_tests"
path = "src/lib.rs"

[dependencies]
bb-arch.workspace = true
bb-consts = { path = "../cli/bb-consts" }
bb-funcs = { path = "../cli/bb-funcs" }
bb-types = { path = "../cli/bb-types" }
bb-clang.workspace = true
bb-sdk.workspace = true
bb-sparse.workspace = true
clang.workspace = true
anyhow.workspace = true
serial_test.workspace = true
serde_json.workspace = true
